--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Hello, Alejandro!</title>
+    <title>Home</title>
   </head>
   <body>
-    body
+    <div id="coding">
+      <a href="https://www.hackerrank.com/dashboard"> Hackerrank </a>
+    </div>
   </body>
 </html>
