--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <div id="coding">
-      <a href="https://www.hackerrank.com/dashboard"> Hackerrank </a>
+      <a href="https://www.hackerrank.com/dashboard">Hackerrank</a>
+      <a href="https://Github">Github</a>
+    </div>
+    <div id="social_media">
+      <a href="https://www.youtube.com">Youtube</a>
     </div>
   </body>
 </html>
