--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
   </head>
   <body>
     <div id="coding">
       <a href="https://www.hackerrank.com/dashboard">Hackerrank</a>
-      <a href="https://Github">Github</a>
+      <a href="https://www.github.com">Github</a>
+      <a href="https://www.stackoverflow.com">Stack overflow</a>
     </div>
     <div id="social_media">
       <a href="https://www.youtube.com">Youtube</a>
+      <a href="https://www.reddit.com">Reddit</a>
     </div>
   </body>
 </html>
