--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
   </head>
   <body>
-    <div id="coding">
+    <div id="coding" class="column">
       <a href="https://www.hackerrank.com/dashboard">Hackerrank</a>
       <a href="https://www.github.com">Github</a>
       <a href="https://www.stackoverflow.com">Stack overflow</a>
     </div>
-    <div id="social_media">
+    <div id="social_media" class="column">
       <a href="https://www.youtube.com">Youtube</a>
       <a href="https://www.reddit.com">Reddit</a>
     </div>
