add line breaks

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div id="coding" class="column">
-      <a href="https://www.hackerrank.com/dashboard">Hackerrank</a>
-      <a href="https://www.github.com">Github</a>
-      <a href="https://www.stackoverflow.com">Stack overflow</a>
+      <a href="https://www.hackerrank.com/dashboard">Hackerrank<br></a>
+      <a href="https://www.github.com">Github<br></a>
+      <a href="https://www.stackoverflow.com">Stack overflow<br></a>
     </div>
     <div id="social_media" class="column">
-      <a href="https://www.youtube.com">Youtube</a>
-      <a href="https://www.reddit.com">Reddit</a>
+      <a href="https://www.youtube.com">Youtube<br></a>
+      <a href="https://www.reddit.com">Reddit<br></a>
     </div>
   </body>
 </html>
