Change css and add notion

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="social_media" class="column">
       <a href="https://www.youtube.com">Youtube<br></a>
       <a href="https://www.reddit.com">Reddit<br></a>
+      <a href="https://www.notion.so">Notion<br></a>
     </div>
   </body>
 </html>
