--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
   </head>
   <body>
+    <p id="welcome">Keep it simple, stupid</p>
     <div id="coding" class="column">
       <a href="https://www.hackerrank.com/dashboard">Hackerrank<br></a>
       <a href="https://www.github.com">Github<br></a>
