add twitch and monkeytype link

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       <a href="https://www.hackerrank.com/dashboard">Hackerrank<br></a>
       <a href="https://www.github.com">Github<br></a>
       <a href="https://www.stackoverflow.com">Stack overflow<br></a>
+      <a href="https://monkeytype.com/">Monkey Type<br></a>
     </div>
     <div id="social_media" class="column">
       <a href="https://www.youtube.com">Youtube<br></a>
       <a href="https://www.reddit.com">Reddit<br></a>
       <a href="https://www.notion.so">Notion<br></a>
+      <a href="https://www.twitch.tv/">Twitch<br></a>
     </div>
   </body>
 </html>
